Minor changes to pretty much everything and renamed Master.bib master.bib.

--- a/LaTeX/makefile
+++ b/LaTeX/makefile
@@ -1,2 +1,5 @@
-dissertation.pdf: dissertation.tex
+dissertation.pdf: dissertation.tex dissertation.aux
+	pdflatex dissertation.tex
+	bibtex dissertation.aux
+	pdflatex dissertation.tex
 	pdflatex dissertation.tex
