--- a/LaTeX/makefile
+++ b/LaTeX/makefile
@@ -1,4 +1,4 @@
-dissertation.pdf: dissertation.tex dissertation.aux
+dissertation.pdf: dissertation.tex dissertation.aux gauss.tex
 	pdflatex dissertation.tex
 	bibtex dissertation.aux
 	pdflatex dissertation.tex
