--- a/LaTeX/makefile
+++ b/LaTeX/makefile
@@ -1,5 +1,8 @@
-dissertation.pdf: dissertation.tex dissertation.aux gauss.tex
+dissertation.pdf: dissertation.tex master.bib
 	pdflatex dissertation.tex
 	bibtex dissertation.aux
 	pdflatex dissertation.tex
+	pdflatex dissertation.tex
+
+s:
 	pdflatex dissertation.tex
